Fix overlapping div redundant space on the edges

--- a/front-end/src/components/HomePage/HomePage.css
+++ b/front-end/src/components/HomePage/HomePage.css
@@ -4,6 +4,12 @@
     background-image: linear-gradient(#ba8ce6, #391e86);
     width: 100vw;
     height: 100vh;
+    position: absolute;
+    margin: 0px;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
 }
 
 .welcome-slide {
